styles.css
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
}

html {
  font-size: 16px;
}

body {
  font-family: "Poppins", sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
  background-color: rgba(250, 250, 250, 1);
  padding: 3.5rem 1.875rem 2.875rem 1.8125rem;
  gap: 3.75rem;
}

header {
  padding: 1.2rem;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

section {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(4, auto);
  gap: 2rem;
  justify-items: center; /* Horizontal centering */
  align-items: center; /* Vertical centering */
}

.card {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  background-color: #fff;
  width: 90%;
  padding: 2rem;
  box-shadow: 0 15px 30px -11px rgba(131, 166, 210, 0.5);
  border-radius: 0.5rem;
  gap: 1rem;
  position: relative;
  z-index: 1;
}

h3 {
  font-family: Poppins;
  font-size: 1.25rem;
  font-style: normal;
  font-weight: 600;
  line-height: 135%;
}

p {
  font-family: Poppins;
  font-size: 0.8125rem;
  font-style: normal;
  font-weight: 400;
  line-height: 160%; /* 1.3rem */
  letter-spacing: 0.00563rem;
}

img {
  flex-shrink: 0;
  align-self: flex-end;
}

section p {
  margin-bottom: 2rem;
}

.supervisor-card {
  border-top: solid 4px hsl(180, 62%, 55%);
}
.team-builder-card {
  border-top: solid 4px #ea5454;
}

.karma-card {
  border-top: solid 4px #fcae4a;
}

.calculator-card {
  border-top: solid 4px #549ef2;
}

h1 {
  font-family: Poppins;
  font-size: 1.5rem;
  font-style: normal;
  font-weight: 275;
  line-height: 140%; /* 2.1rem */
  letter-spacing: 0.01563rem;
}

h2 {
  font-family: Poppins;
  font-size: 1.5rem;
  font-style: normal;
  font-weight: 600;
  line-height: 140%; /* 2.1rem */
  letter-spacing: 0.01563rem;
  margin-bottom: 1rem;
}

.description {
  font-size: 0.9375rem;
  font-style: normal;
  font-weight: 400;
  line-height: 140%; /* 1.3125rem */
  letter-spacing: 0.0065rem;
}

p {
  color: #6a7178;
}

@media (min-width: 48rem) {
  section {
    width: 100%;
    display: grid;
    grid-template-columns: auto auto; /* shrink to fit content */
    grid-template-rows: auto auto auto;
    gap: 2rem;
    justify-content: center; /* center grid as a whole */
    align-items: center;
  }

  .team-builder-card {
    grid-column: 1 / -1;
    grid-row: 1;
    justify-self: center;
    width: clamp(19.5rem, 33vw, 21.875rem);
  }

  .supervisor-card {
    grid-column: 1;
    grid-row: 2;
    justify-self: end; /* push closer to center */
    width: clamp(19.5rem, 33vw, 21.875rem);
  }

  .karma-card {
    grid-column: 2;
    grid-row: 2;
    justify-self: start; /* push closer to center */
    width: clamp(19.5rem, 33vw, 21.875rem);
  }

  .calculator-card {
    grid-column: 1 / -1;
    grid-row: 3;
    justify-self: center;
    width: clamp(19.5rem, 33vw, 21.875rem);
  }

  header {
    width: 60%;
  }
  h1 {
    font-size: 2.25rem;
  }

  h2 {
    font-size: 2.25rem;
  }

  .description {
    font-size: 0.9375rem;
  }
}

@media (min-width: 90rem) {
  section {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto auto; /* 2 rows */
    gap: 2rem;
    justify-items: center;
    align-items: center;
  }

  .supervisor-card {
    grid-column: 1;
    grid-row: 1 / 3; /* span rows 1 to 2, makes it tall */
    width: clamp(19.5rem, 25vw, 21.875rem);
  }

  .team-builder-card {
    grid-column: 2;
    grid-row: 1; /* sits in top middle */
    width: clamp(19.5rem, 25vw, 21.875rem);
  }

  .calculator-card {
    grid-column: 3;
    grid-row: 1 / 3; /* span rows 1 to 2, makes it tall */
    width: clamp(19.5rem, 25vw, 21.875rem);
  }

  .karma-card {
    grid-column: 2;
    grid-row: 2; /* sits in bottom middle */
    width: clamp(19.5rem, 25vw, 21.875rem);
  }
}

